--- a/README.adoc
+++ b/README.adoc
@@ -73,6 +73,7 @@ It is still in early days, and beta qualtiy.
  * Refactor to make it cleanier, less messy.
  * Bolt a HTTP server to the front to dynamically serve tiles
  * Faster, always making it faster
+ * Document the Metatile file format
 
 == Copyright
 
